[package]
name = "md-export"
version = "0.1.3"
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "md-export"
path = "src/main.rs"

[features]
redis-cache = ["dep:fred"]

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros"] }
bytes = "1.11.1"
figment2 = { version = "0.11.4", features = ["env"] }
fred = { version = "10.1.0", optional = true }
minijinja = "2.19.0"
moka = { version = "0.12.15", features = ["future"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[dev-dependencies]
